tests/integration/fail/unexpected_token/buried.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'ParseError'
{ foo = { bar = [ 2 @ ],}, baz = 2 }